--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 #root {
-  /* max-width: 1280px; */
   margin: 0 auto;
-  /* padding: 2rem; */
   text-align: center;
   max-width:468px;
 }
@@ -67,8 +65,8 @@
 
 .btn_next{
   position: absolute;
-  bottom: 104px;
-  right:40px;
+  bottom: 12px;
+  left: 20px;
 }
 
 .read-the-docs {
@@ -76,11 +74,11 @@
 }
 .logo-circle {
   position: relative;
-  width: 100px; /* Adjust based on your layout */
-  height: 100px; /* Adjust based on your layout */
+  width: 100px; 
+  height: 100px; 
   border-radius: 50%;
   overflow: hidden;
-  background: white; /* Ensure visibility if needed */
+  background: white; 
 }
 
 @media (max-width:467px){
@@ -98,7 +96,7 @@
   }
   .btn_next {
     position: absolute;
-    bottom: 84px;
-    right: 22px;
+    bottom: 7px;
+    left: 18px;
   }
 }
