--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,11 @@
 @layer base {
     body, html {
       @apply h-full w-full
+
     }
     body {
       @apply font-poppins bg-slate-200;
+      overflow: hidden
     }
   }
 
