--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 }
 .page1{
   position: absolute;
-  height: 100vh;
+  height: 100%;
   top: 0
 }
 .page1 img{
@@ -46,7 +46,7 @@
 }
 .page2{
   position: absolute;
-  height: 100vh;
+  height: 100%;
   top: 0
 }
 .page2 img{
@@ -55,7 +55,7 @@
 }
 .page3{
   position: absolute;
-  height: 100vh;
+  height: 100%;
   top: 0
 }
 .page3 img{
